[IMP] <pro>Radio: Optimized the issue of too wide click hot area in Form.

--- a/components-pro/radio/style/index.less
+++ b/components-pro/radio/style/index.less
@@ -13,6 +13,10 @@
     display: inline-flex;
   }
 
+  &-wrapper.@{field-prefix-cls} {
+    width: auto;
+  }
+
   &-inner {
     position: relative;
     display: inline-block;
